--- a/src/stories/Boton/Boton.css
+++ b/src/stories/Boton/Boton.css
@@ -3,17 +3,26 @@
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   border: 0;
   font-weight: 600;
-  padding: 0.8rem 1.5rem;
   border-radius: 9999px;
   color: #fff;
   cursor: pointer;
 }
-
 .btn-primary {
   background-color: #019cfd;
 }
-
 .btn-secondary {
   background-color: #171c23;
   border: 1px solid #fff;
+}
+.btn-large {
+  font-size: 1.2rem;
+  padding: 0.8rem 1.5rem;
+}
+.btn-medium {
+  font-size: 0.9rem;
+  padding: 0.5rem 1.2rem;
+}
+.btn-small {
+  font-size: 0.7rem;
+  padding: 0.4rem 1rem;
 }
